--- a/src/components/QUIZ/Quiz.css
+++ b/src/components/QUIZ/Quiz.css
@@ -76,12 +76,9 @@
   transition: all 0.2s ease-in-out;
 }
 
-.answer button:hover,
-.answer button:focus {
-  /* background: linear-gradient(180deg, #bf48f6 0%, #9b50f2 100%); */
+.answer button:hover {
   background: #9d5af5;
   color: white;
-  /* box-shadow: 0 0 4px 2px rgba(255, 200, 60, 0.8); */
 }
 
 .answer button:active {
